--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  box-sizing: border-box;
+  position: relative;
+  min-width: 0;
+}
+
+body {
+  min-height: 100dvh;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  text-wrap: balance;
+}
+
+p {
+  text-wrap: pretty;
+}
+
 @font-face {
   font-family: "Marker";
   src: url(/public/fonts/PermanentMarker-Regular.ttf);
